--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "indexleftcolumn",
         "requestleftcolumn",
         "reviewsleftcolumn",
-        "rightcolumn"
+        "rightcolumn",
+        "topnav"
     ]
 }
