--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "aboutleftcolumn",
         "disclaimernote",
         "disclaimersleftcolumn",
+        "Dragonball",
         "indexleftcolumn",
         "requestleftcolumn",
         "reviewsleftcolumn",
